--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -62,15 +62,15 @@
     "### Describe what each of the following means\n",
     "\n",
     "#### Production\n",
-    "(Insert answer here)\n",
+    "Production means where we can work relaibly and consistently.Production code is the code that is used by clients.But it should not be necessarily stable and relaible.\n",
     "#### Clean \n",
-    "(Insert answer here)\n",
+    "The code that is readable and anyone who reads the code must easly understand it even  if its read by someone new to that.It should also be easy to understand and change whenever required.\n",
     "#### Modular\n",
-    "(Insert answer here)\n",
+    "It is the code in which a complex problem is divided to sub sub problems until each of them can be solved independantly and easly.\n",
     "#### Module\n",
-    "(Insert answer here)\n",
+    "Module is a piece of code created and maintained independantly and can be used in different systems.\n",
     "#### Refactoring code\n",
-    "(Insert answer here)"
+    "The process of redesigining the code without any change in its logic,external behavior and functionality."
    ]
   },
   {
