--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -171,7 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your solution here"
+    "# Insert your solution here\n",
+    "new_df=df;new_df.columns = df.columns.str.replace(' ','_')\n",
+    "new_df.head()"
    ]
   },
   {
