--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -264,6 +264,11 @@
    "outputs": [],
    "source": [
     "# Insert answer here\n",
+    "start=time.time()\n",
+    "\n",
+    "verified_elements=np.intersect1d(all_elements,subset_elements)\n",
+    "#using numpy inbuilt function because as per definition:\n",
+    "#In vectorisation we can replace for loop with numpy function\n",
     "\n",
     "print(len(verified_elements))\n",
     "print('Duration: {} seconds'.format(time.time() - start))"
@@ -283,6 +288,10 @@
    "outputs": [],
    "source": [
     "# Insert answer here\n",
+    "start=time.time()\n",
+    "\n",
+    "#using datastructure set.\n",
+    "verified_elements=list(set(all_elements)&set(subset_elements))\n",
     "\n",
     "print(len(verified_elements))\n",
     "print('Duration: {} seconds'.format(time.time() - start))"
