--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -172,8 +172,8 @@
    "outputs": [],
    "source": [
     "# Insert your solution here\n",
-    "new_df=df;new_df.columns = df.columns.str.replace(' ','_')\n",
-    "new_df.head()"
+    "df.columns = df.columns.str.replace(' ','_')\n",
+    "df.head()"
    ]
   },
   {
@@ -389,19 +389,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Remember you were in a pokemon room (discord) what is the **type** of that pokemon"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert your code here"
+    "# Insert your code here\n",
+    "import pokebase as pb\n"
    ]
   },
   {
@@ -512,9 +513,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "06e483f59aeb05a49d223db5b746e2d43658eec77bca882da011caef50b704e4"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -526,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
