--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -397,12 +397,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "water\nflying\n"
+     ]
+    }
+   ],
    "source": [
     "# Insert your code here\n",
-    "import pokebase as pb\n"
+    "import requests\n",
+    "\n",
+    "urll = \"http://pokeapi.co/api/v2/pokemon/gyarados/\"\n",
+    "urls=[]\n",
+    "data = requests.get(urll).json()\n",
+    "for i in range (2):\n",
+    "    poke_type=data[\"types\"][i]['type']['name']\n",
+    "    urls.append(data[\"types\"][i]['type']['url']) #appending url for step 2\n",
+    "    print(poke_type)\n"
    ]
   },
   {
@@ -415,12 +431,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Insert your code here"
+    "# Insert your code here\n",
+    "d_dmg_url=[]\n",
+    "tp=[]\n",
+    "for url in urls:\n",
+    "    poke_type=requests.get(url).json()\n",
+    "    for j in poke_type[\"damage_relations\"][\"double_damage_from\"]:\n",
+    "        print(j[\"name\"])\n",
+    "        tp.append(j[\"name\"])\n",
+    "        d_dmg_url.append(j[\"url\"])\n",
+    "    for j in poke_type[\"damage_relations\"][\"half_damage_from\"]:\n",
+    "        print(j[\"name\"])\n",
+    "\n",
+    " \n"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 8,
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "grass\n",
+      "electric\n",
+      "steel\n",
+      "fire\n",
+      "water\n",
+      "ice\n",
+      "rock\n",
+      "electric\n",
+      "ice\n",
+      "fighting\n",
+      "bug\n",
+      "grass\n"
+     ]
+    }
    ]
   },
   {
@@ -432,11 +479,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Pokemon of Type: grass\n",
+      "bulbasaur,ivysaur,venusaur,oddish,gloom\n",
+      "\n",
+      "Pokemon of Type: electric\n",
+      "pikachu,raichu,magnemite,magneton,voltorb\n",
+      "\n",
+      "Pokemon of Type: rock\n",
+      "geodude,graveler,golem,onix,rhyhorn\n",
+      "\n",
+      "Pokemon of Type: electric\n",
+      "pikachu,raichu,magnemite,magneton,voltorb\n",
+      "\n",
+      "Pokemon of Type: ice\n",
+      "dewgong,cloyster,jynx,lapras,articuno\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Insert your code here"
+    "# Insert your code here\n",
+    "for i in range(len(d_dmg_url)):\n",
+    "    dat=requests.get(d_dmg_url[i]).json()\n",
+    "    print(\"Pokemon of Type: \"+tp[i])\n",
+    "    for j in range(5):\n",
+    "        print(dat[\"pokemon\"][j][\"pokemon\"][\"name\"],end='')\n",
+    "        if j!=4:\n",
+    "            print(end=',')\n",
+    "        \n",
+    "    print(\"\\n\")"
    ]
   },
   {
@@ -450,21 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.8.5, pytest-6.2.1, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/abhijitramesh/development/Python-ifed\n",
-      "collected 4 items                                                              \u001b[0m\n",
-      "\n",
-      "test_abilities.py \u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m.\u001b[0m\u001b[32m                                                   [100%]\u001b[0m\n",
-      "\n",
-      "\u001b[32m============================== \u001b[32m\u001b[1m4 passed\u001b[0m\u001b[32m in 2.75s\u001b[0m\u001b[32m ===============================\u001b[0m\n"
+      "============================= test session starts =============================\nplatform win32 -- Python 3.8.0, pytest-6.2.1, py-1.10.0, pluggy-0.13.1\nrootdir: c:\\Users\\geo\\Desktop\\Python-ifed-challenge\ncollected 4 items\n\ntest_abilities.py FFFF                                                   [100%]\n\n================================== FAILURES ===================================\n____________________________ test_ability_machamp _____________________________\n\n    def test_ability_machamp():\n>       assert(ability(\"machamp\")==['guts', 'no-guard', 'steadfast'])\nE       AssertionError: assert None == ['guts', 'no-guard', 'steadfast']\nE        +  where None = ability('machamp')\n\ntest_abilities.py:4: AssertionError\n---------------------------- Captured stdout call -----------------------------\n['guts', 'no-guard', 'steadfast']\n____________________________ test_ability_pikachu _____________________________\n\n    def test_ability_pikachu():\n>       assert(ability(\"pikachu\")==['static', 'lightning-rod'])\nE       AssertionError: assert None == ['static', 'lightning-rod']\nE        +  where None = ability('pikachu')\n\ntest_abilities.py:7: AssertionError\n---------------------------- Captured stdout call -----------------------------\n['static', 'lightning-rod']\n___________________________ test_ability_charizard ____________________________\n\n    def test_ability_charizard():\n>       assert(ability(\"charizard\")==['blaze', 'solar-power'])\nE       AssertionError: assert None == ['blaze', 'solar-power']\nE        +  where None = ability('charizard')\n\ntest_abilities.py:10: AssertionError\n---------------------------- Captured stdout call -----------------------------\n['blaze', 'solar-power']\n______________________________ test_ability_evee ______________________________\n\n    def test_ability_evee():\n>       assert(ability(\"eevee\")==['run-away', 'adaptability', 'anticipation'])\nE       AssertionError: assert None == ['run-away', 'adaptability', 'anticipation']\nE        +  where None = ability('eevee')\n\ntest_abilities.py:13: AssertionError\n---------------------------- Captured stdout call -----------------------------\n['run-away', 'adaptability', 'anticipation']\n=========================== short test summary info ===========================\nFAILED test_abilities.py::test_ability_machamp - AssertionError: assert None ...\nFAILED test_abilities.py::test_ability_pikachu - AssertionError: assert None ...\nFAILED test_abilities.py::test_ability_charizard - AssertionError: assert Non...\nFAILED test_abilities.py::test_ability_evee - AssertionError: assert None == ...\n============================== 4 failed in 6.45s ==============================\n"
      ]
     }
    ],
@@ -473,11 +544,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Please version till this point saying with a message \"Completed challenge 2\""
-   ]
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
