Completed Extra Challenge --fixed a small error

--- a/Python-ifed.ipynb
+++ b/Python-ifed.ipynb
@@ -397,14 +397,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "water\nflying\n"
+      "ghost\npoison\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
     "# Insert your code here\n",
     "import requests\n",
     "\n",
-    "urll = \"http://pokeapi.co/api/v2/pokemon/gyarados/\"\n",
+    "urll = \"http://pokeapi.co/api/v2/pokemon/gengar/\"\n",
     "urls=[]\n",
     "data = requests.get(urll).json()\n",
     "for i in range (2):\n",
@@ -448,24 +448,23 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 21,
+   "execution_count": 25,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "grass\n",
-      "electric\n",
-      "steel\n",
-      "fire\n",
-      "water\n",
-      "ice\n",
-      "rock\n",
-      "electric\n",
-      "ice\n",
-      "fighting\n",
-      "bug\n",
-      "grass\n"
+      "ghost\n",
+      "dark\n",
+      "hi\n",
+      "hi\n",
+      "ground\n",
+      "psychic\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n",
+      "hi\n"
      ]
     }
    ]
@@ -479,9 +478,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Pokemon of Type: ghost\n",
+      "gastly,haunter,gengar,misdreavus,shedinja\n",
+      "\n",
+      "Pokemon of Type: dark\n",
+      "umbreon,murkrow,sneasel,houndour,houndoom\n",
+      "\n",
+      "Pokemon of Type: ground\n",
+      "sandshrew,sandslash,nidoqueen,nidoking,diglett\n",
+      "\n",
+      "Pokemon of Type: psychic\n",
+      "abra,kadabra,alakazam,slowpoke,slowbro\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Insert your code here\n",
     "for i in range(len(d_dmg_url)):\n",
